# eventsocketcpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in  EventSocketCppConfig.cmake  EventSocketCppConfig.cmake.in  JsonCpp.cmake
examples/: CMakeLists.txt  client.cpp  server.cpp
include/: CustomWebSocket.h
include/eventsocketcpp/: EventSocket.h  Message.pb.h  RedBackCommon.h  RedBackConnection.h  RedBackMessage.h  RedBackTSQueue.h
include/eventsocketcpp/client/: CustomWebSocketClient.h  EventClientInterface.h
include/eventsocketcpp/server/: CustomWebSocket.h  EventServerInterface.h  ListeningServer.h
packaging/: CMakeLists.txt
src/: CMakeLists.txt  CustomWebSocket.cpp  CustomWebSocketClient.cpp  ListeningServer.cpp  Message.pb.cc  Message.pb.h  Message.proto  RedBackMessage.cpp  example.cpp
tests/: CMakeLists.txt  testMessage.cpp
